footer logo added

--- a/style.css
+++ b/style.css
@@ -780,6 +780,7 @@ footer{
     background-color: #0a1229;
     position: relative;
     margin: 0 50px; 
+    position: relative;
 }
 .footer-content{
     color: white;
@@ -821,4 +822,15 @@ footer .links{
 }
 .footer-contact p{
     color: rgba(255, 255, 255, 0.541);
+}
+.footer-logo{
+    width: 150px;
+    height: 100px;
+    background-color: #e27312;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    left: 50px;
 }
